@startuml ServerAndClientClassDiagram
'https://plantuml.com/class-diagram

class Game {
    Client gamer_1:
    Client gamer_2;

    Board board;
}

class Server {
    Game[] games;
}

class Client {
    + String id
    - int32 ip
}

class Board {
    int[][] board
}

Server o-- "0...N" Game

Game *-- "2" Client
Game *-- "1" Board


class RawCommand {
    + Command command
}

class GameCommand {
    int from;
    int to;
}

class ChatCommand {
    string text;
}

class OptionCommand {
    Option option
}

RawCommand <|-- GameCommand
RawCommand <|-- ChatCommand
RawCommand <|-- OptionCommand

enum Command {
    CHAT
    GAME
    OPTION
}

enum Option {
    FLEE
    EXPLODE
}


@enduml